--- a/my-app/src/components/HelpSlider.css
+++ b/my-app/src/components/HelpSlider.css
@@ -4,15 +4,16 @@
   position: relative;
   width: 100%;
   height: 375px; /* Adjust height as needed */
-  overflow: hidden;
+  overflow: visible;
   border-radius: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .slide-image {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: auto;
+  max-height: 100%;
+  object-fit: contain;
   transition: transform 0.5s ease;
 }
 
@@ -35,7 +36,7 @@
   left: 0;
   width: 98%;
   padding: 10px;
-  background: rgba(0, 0, 9,0.01); /* Darker overlay for text */
+  background: rgba(0, 0, 9, 0.01); /* Darker overlay for text */
   text-align: center;
   color: white;
 }
