--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1144,3 +1144,17 @@ body {
   cursor: not-allowed;
   opacity: 0.6;
 }
+
+.intro-hero {
+  position: relative;
+  height: auto;
+  max-height: relative;
+  border-radius: 14px;
+  overflow: cover;
+}
+
+.intro-hero img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
